--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,32 @@
 language: python
-python:
-  - '2.7'
-  - '3.6'
-  - '3.7'
+matrix:
+  include:
+    - name: 'Run it on Xenial'
+      python:
+        - '2.7'
+        - '3.6'
+        - '3.7'
+      os: xenial
+    - name: 'Run it on Bionic'
+      python:
+        - '2.7'
+        - '3.6'
+        - '3.7'
+      os: bionic
+    - name: 'Run it on MacOS'
+      python:
+        - '2.7'
+        - '3.6'
+        - '3.7'
+      os: osx
+      language: shell
+    - name: 'Run it on Wintel - bleach'
+      python:
+        - '2.7'
+        - '3.6'
+        - '3.7'
+      os: windows
+      language: shell
+      before_install:
+        - choco install python
 script: python -c "print('Hello!')"
