--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
       os: windows
       language: shell
       before_install:
-        - choco install python --version 2.7
+        - choco install python2
     - name: 'Run it on 3.6 Wintel'
       python: 3.6
       os: windows
@@ -49,4 +49,4 @@ matrix:
       language: shell
       before_install:
         - choco install python --version 3.7
-script: python -c "print('Hello!')"
+script: python -c "print('Hello!')" || python -c "print 'ahoj'"
