--- a/.travis.yml
+++ b/.travis.yml
@@ -50,3 +50,9 @@ matrix:
 #       before_install:
 #         - choco install python --version 3.7
 script: python -c "print('Hello!')" || python -c "print 'ahoj'"
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: b352a28d-cb15-4084-9c00-168f0e291047
+  app: myapp1
