--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: 3.6
 os: xenial
 install:
-  - pip install Flask flask-python python-flask
+  - pip install Flask python-flask
 script:
   - sudo python app.py
 deploy:
