--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: 3.6
 install:
-  - pip install Flask
+  - sudo pip install Flask
 script:
   - sudo python app.py
 deploy:
